examples/negatives/assignment_negative.bl
// missing one parameter

struct Point { x: Int, y: Int}
var p2: Point = Point(10);
print(p2);